welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:5: error: reassignment to val
        die1=die1+1
            ^withoutDoubles:6: error: reassignment to val
      }else{die1=1;return die1+die2}
                ^withoutDoubles:3: error: type mismatch;
 found   : Unit
 required: Int
    if (die1==die2){
    ^